--- a/src/app/components/main/menu/side-navigation/side-navigation.component.html
+++ b/src/app/components/main/menu/side-navigation/side-navigation.component.html
@@ -51,6 +51,11 @@
                     <span class="nav-label">Button</span>
                 </a>
             </li>
+            <li>
+                <a (click)="createComponent('input')">
+                    <span class="nav-label">Input Field</span>
+                </a>
+            </li>
         </ul>
     </div>
 </nav>
