--- a/src/app/components/main/canvas/canvas.component.scss
+++ b/src/app/components/main/canvas/canvas.component.scss
@@ -1,7 +1,8 @@
 .screen {
     border: solid;
     width: 100%;
-    height: 80vh;
+    height: 75vh;
+    background: white;
 }
 .draggable {
     transition: box-shadow 200ms cubic-bezier(0, 0, 0.2, 1);
@@ -55,4 +56,57 @@ mwlResizable {
 }
 .resize-handle-right {
     right: 0;
+}
+.input-field {
+    background-color: #ffffff;
+    background-image: none;
+    border: 1px solid #a0a4a8;
+    border-radius: 1px;
+    color: inherit;
+    padding: 6px 12px;
+    font-size: 0.9rem;
+    height: calc(1.5em + 0.75rem + 2px);
+    font-weight: 400;
+    line-height: 1.5;
+    background-clip: padding-box;
+}
+.inside-ibox {
+    border-top: 1px !important;
+    display: flex;
+}
+.func-name {
+    margin-top: auto;
+    margin-bottom: auto;
+}
+.add-btn {
+    padding: 0 !important;
+    height: 25px;
+    width: 25px;
+    border-radius: 50%;
+    margin-top: auto;
+    margin-bottom: auto;
+}
+.add-title {
+    margin-top: auto;
+    margin-bottom: auto;
+}
+.row-flex {
+    display: flex;
+    flex-direction: row;
+}
+.create-item.dropdown-menu.show {
+    left: -30px !important;
+    top: 30px !important;
+}
+.column {
+    display: flex;
+    flex-direction: column !important;
+}
+#logic {
+    height: max-content;
+}
+.tab-btn {
+    width: 15%;
+    justify-content: center !important;
+    text-align: center;
 }
